--- a/templates/chat.html
+++ b/templates/chat.html
@@ -23,7 +23,7 @@
 
  <script>
   const chatWith = "{{ chat_with }}";
-  const currentAdmin = "{{ session['admin'] }}";
+   const currentAdmin = "{{ current_admin }}";
 
   function goBack() {
     window.location.href = "/dashboard";
